--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
     - $HOME/.m2
 git:
   depth: 10
-after_success: bash <(curl -s https://codecov.io/bash)
+#after_success: bash <(curl -s https://codecov.io/bash)
 env:
   global:
    # COVERITY_SCAN:
